--- a/server-config.json
+++ b/server-config.json
@@ -1,6 +1,6 @@
 {
     "port": 3000,
-    "use_db": false, 
+    "use_db": true, 
     "use_sockets": false,
     "use_socknsp": false,
     "socknsp": "/namespace"
