--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "4.9.1",
     "path": "0.12.7",
     "react": "15.4.2",
+    "react-bootstrap-table": "3.1.1",
     "react-dom": "15.4.2",
     "react-router": "2.4.1"
   },
@@ -30,7 +31,7 @@
     "babel-loader": "6.2.0",
     "babel-preset-es2015": "6.3.13",
     "babel-preset-react": "6.3.13",
-    "webpack": "2.2.1"
+    "webpack": "^1.12.4"
   },
   "engines": {
     "node": "6.9.4"
