--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack & node server",
     "start": "node server.js",
-    "build": "webpack -w"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -22,15 +22,20 @@
     "mongoose": "4.9.1",
     "path": "0.12.7",
     "react": "15.4.2",
+    "react-bootstrap": "^0.29.5",
     "react-bootstrap-table": "3.1.1",
     "react-dom": "15.4.2",
     "react-router": "2.4.1"
   },
   "devDependencies": {
-    "babel-core": "6.3.13",
-    "babel-loader": "6.2.0",
-    "babel-preset-es2015": "6.3.13",
-    "babel-preset-react": "6.3.13",
+    "babel-core": "^6.0.0",
+    "babel-loader": "^6.0.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "bootstrap": "3.3.5",
+    "css-loader": "^0.21.0",
+    "style-loader": "^0.13.0",
+    "styled-components": "^1.2.1",
     "webpack": "^1.12.4"
   },
   "engines": {
