--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack & node server",
     "start": "node server.js",
-    "build": "webpack"
+    "build": "webpack",
+    "buildw": "webpack -w"
   },
   "repository": {
     "type": "git",
