WIP, calculations panel is in, added and centered buttons

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "path": "0.12.7",
     "react": "15.4.2",
     "react-bootstrap": "^0.29.5",
+    "react-bootstrap-date-picker": "^5.0.1",
     "react-dom": "15.4.2",
     "react-router": "2.4.1",
     "reactjs-bootstrap-table": "^1.0.12"
